<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent"
        app:theme="@style/DarkThemeLogin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/splash_screen_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="30dp"
                android:src="@drawable/side_drawer_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/splash_screen_logo"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin"
                tools:context="com.ndtv.mediaprima.mvvm.view.fragment.LoginFragment">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_login"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_login"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/forgot_password_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_gravity="end"
                        android:clickable="true"
                        android:text="@string/forgot_password" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@color/artist_text_background"
                    android:layout_marginTop="@dimen/signIn_button_margin"
                    android:text="Sign in" />

                <Button
                    android:id="@+id/fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="SignIn with Facebook"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/com_facebook_button_icon"
                    style="@style/com_facebook_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:text="or" />

                <Button
                    android:id="@+id/email_signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SecondaryButton"
                    android:text="Sign up" />

            </LinearLayout>

            <!--<ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />-->

        </RelativeLayout>

    </ScrollView>
</layout>